# mio-modding-api

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  build_mod.ps1  health_monitor.cpp  hitless.cpp  infinite_stamina.cpp  mio-modding-api.sln  modding_api.cpp  modding_api.h  nacre_coords.cpp  nacre_monitor.cpp  position_monitor.cpp  slight_breeze.cpp  stamina_monitor.cpp  vcpkg.json
.github/workflows/: build-release.yml  doc-update.yml
docs/: .prettierignore  Doxyfile  header.html
include/: flamby_handling.h  gin_serializer.h  modding_api.h
mio-modding-api/: dllmain.cpp  flamby-handling.cpp  flamby-handling.h  general-util.cpp  gin-serialization.cpp  gin-serialization.h  hooks.cpp  memory-util.cpp  memory-util.h  mio-modding-api.h  mio-modding-api.vcxproj  mio-modding-api.vcxproj.filters  player-util.cpp  player.cpp  post-build.bat  save-data.cpp  save-entry-util.cpp  saved-addresses.cpp  saved-addresses.h  vectors.h
mio-modding-api/Mod/: structs.json  variables.json
src/: assembly.asm  assembly.h  dllmain.cpp  flamby_handling.cpp  gin_serializer.cpp  modding_api.cpp
